--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="sources">Sources</string>
     <string name="everything">Everything</string>
     <string name="headlines">Headlines</string>
+    <string name="search">Search...</string>
 </resources>
